[package]
name = "my-fetch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "my-fetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1"
quick_html2md = "0.2.1"
readability = { version = "0.3.0", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "brotli", "charset", "deflate", "gzip", "http2", "rustls-tls"] }
scraper = "0.23"
serde_json = "1"
url = "2"
