[package]
name = "volc-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "volc-gen"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
image = { version = "0.24.9", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "=2.10.1", features = ["json", "tls"] }
