[package]
name = "volc-speech"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "volc-speech"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = { version = "0.24", features = ["native-tls"] }
ureq = { version = "=2.10.1", features = ["json", "tls"] }
uuid = { version = "1", features = ["v4"] }
